pulling Mandy's updates

--- a/templates/newevent.html
+++ b/templates/newevent.html
@@ -30,7 +30,7 @@
             </div>
 
             <div class="container navbar-nav justify-content-end">
-              <a class="nav-item nav-link " href="index.html">Guest</a>
+              <a class="nav-item nav-link " href="/">Guest</a>
               <a class="nav-item nav-link active text-light" href="host.html">Host</a>
             </div>
       </nav>
