--- a/templates/index.html
+++ b/templates/index.html
@@ -16,8 +16,15 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}"/>
     <script type="text/javascript" src="{{ url_for('static', filename='date.js') }}"></script>
 
-    <script>
-    var mealList = {{ meals | safe }}
+    <script async defer>
+    var mealList = {{ meals | safe }};
+    var baseUrl = 'https://maps.googleapis.com/maps/api/geocode/json?address=';
+    var suffixUrl = '&key=AIzaSyANKZenrKFyT1N5dC427dHbo_-BAD1DmA4';
+    for (meal in mealList){
+      response = await fetch(baseURL+str(meal['fullAddr'])+suffixUrl);
+      myJson = await response.json();
+    }
+    console.log(myJson)
     </script>
     <title>Communal Table</title>
   </head>
@@ -123,7 +130,7 @@
     <!-- GMAP -->
     <script type="text/javascript" src="{{ url_for('static', filename='map.js') }}"></script>
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBb93Bs7HrtXdEQ4wNITr_Ay6ulIH2aSAc&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyANKZenrKFyT1N5dC427dHbo_-BAD1DmA4&callback=initMap">
     </script>
 
     <!-- Optional JavaScript -->
